Changes to BC and behavior  in version 4.3.0
============================================

INI setting changes
-------------------

- Webshop tab hidden by default

  As a first step towards removing the shop functionality from the kernel and
  move it into an extension, we have now disabled this tab by default.
  You can re-enable it by adding Tabs[]=shop to menu.ini[TopAdminMenu]
  
- Design tab hidden by default

  All menu entries from design tab except Template, has been moved to setup tab.
  If you want to enable design tab and / or Template link, see menu.ini.

- site.ini[RSSSettings]DefaultVersion

  Changed default version from 1.0 to 2.0 as RSS 2.0 is the most widespread feed
  format, and the fact that it support images in the feed.


Change of behavior 
-------------------

- Look & Feel url hardcoded in ini

  Because of enhancement  "#15672: Use ini setting for menu items in admin", url to
  Look and Feel object is defined in menu.ini[Leftmenu_setup]Links[]
  ( and if you have re-enabled design tab also menu.ini[Leftmenu_design]Links[] )
  using object id 54. If you have an old install this object id might be a different one
  and you'll need to override the setting.

eZContentClass::instantiate() changes
-------------------------------------

- $userID now has to be false if you want to create objects for current user
  If you don't set it to false, new object id will no longer be stored in user
  session for use by policy system to let anonymous user re edit object. 



Renamed methods
---------------

Removed features
----------------

Removed methods
---------------